feat: Change Navigation Attribute and Response
